# jetbot-ai

./: .env.example  .gitignore  HARDWARE.md  LICENSE  README.md  SETUP.md  requirements.txt  tmpclaude-c436-cwd
docs/: conversation.md  navigation.md  troubleshooting.md
launch/: README.md  start_conversation_complete.sh  start_gesture_complete.sh  start_obstacle_nav_gpu2.sh  start_vila_with_lidar_enhanced.sh
ros2_ws/src/jetbot_conversation/: package.xml  setup.cfg  setup.py
ros2_ws/src/jetbot_conversation/config/: conversation.yaml  conversation_french.yaml  teleop_joy.yaml
ros2_ws/src/jetbot_conversation/jetbot_conversation/: audio_capture_node.py  conversation_node.py  tools.py  tts_node.py
ros2_ws/src/jetbot_conversation/launch/: conversation.launch.py  teleop_joy.launch.py  teleop_keyboard.launch.py
ros2_ws/src/jetbot_hardware/: package.xml  setup.cfg  setup.py
ros2_ws/src/jetbot_hardware/config/: slam_params.yaml
ros2_ws/src/jetbot_hardware/jetbot_hardware/: camera_publisher.py  map_auto_saver.py  motor_controller.py  motor_controller_with_encoders.py  obstacle_avoidance.py  odometry_publisher.py  pose_gesture_node.py
ros2_ws/src/jetbot_hardware/launch/: jetbot_complete.launch.py  jetbot_hardware.launch.py  jetbot_slam.launch.py
ros2_ws/src/jetbot_vlm_nav/: CMakeLists.txt  README.md  package.xml  requirements.txt
ros2_ws/src/jetbot_vlm_nav/behavior_trees/: jetbot_autonomous_nav.xml
ros2_ws/src/jetbot_vlm_nav/config/: nav2_params.yaml
ros2_ws/src/jetbot_vlm_nav/controllers/jetbot_device_discovery/: jetbot_device_discovery.py
ros2_ws/src/jetbot_vlm_nav/controllers/jetbot_ros2_controller/: jetbot_ros2_controller.py
ros2_ws/src/jetbot_vlm_nav/jetbot_vlm_nav/: __init__.py
ros2_ws/src/jetbot_vlm_nav/launch/: jetbot_autonomous.launch.py  jetbot_camera.launch.py  jetbot_nav_with_map.launch.py  jetbot_navigation.launch.py  jetbot_slam_toolbox.launch.py  webots_simulation.launch.py
ros2_ws/src/jetbot_vlm_nav/scripts/: behavior_tree_node.py  vlm_vision_node.py
ros2_ws/src/jetbot_vlm_nav/worlds/: .jetbot_world.wbproj  jetbot_world.wbt
ros2_ws/src/jetbot_wall_line_nav/: README.md  package.xml  setup.cfg  setup.py
ros2_ws/src/jetbot_webrtc_teleop/: package.xml  setup.py
ros2_ws/src/qwen2_audio_interface/: package.xml  setup.cfg  setup.py
ros2_ws/src/robot_face_display/: CMakeLists.txt  README.md  package.xml
ros2_ws/src/robot_face_display/launch/: robot_face.launch.py
ros2_ws/src/robot_face_display/msg/: EyeGaze.msg  FaceExpression.msg
ros2_ws/src/robot_face_display/robot_face_display/: robot_face_control_gui.py  robot_face_node.py
ros2_ws/src/robot_face_display/srv/: TriggerAnimation.srv
scripts/conversation/: voice_mode_controller.py
scripts/navigation/: lidar_only_navigation.py  onnx_obstacle_avoidance_tight_spaces.py
scripts/utils/: adaptive_transformer_controller.py
scripts/vision/: cosmos_mobilenet_hybrid_nav.py  vila_container_node.py  vila_robot_bridge_with_lidar_enhanced.py
(+7 files in other folders)
